Modificación del h1 en el index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <header class="header">
-        <h1>Estudio Jurídico</h1> <!--Título principal de la página-->
+        <h1>- Estudio Jurídico H&H - </h1> <!--Título principal de la página-->
          
         <nav class="nav">
             <div class="btn-group"> 
